# screen_recorder_sdk

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  cmake_build.cmd
docs/: Examples.rst  Requirements.rst  UserAPI.rst  conf.py  index.rst  requirements.txt
java/screen_recorder/: pom.xml  settings.xml
java/screen_recorder/src/main/java/: module-info.java
java/screen_recorder/src/main/java/screen_recorder/: ExitCode.java  RecorderError.java  RecorderParams.java  ScreenRecorder.java
java/screen_recorder/src/main/java/screen_recorder/examples/: SimpleTest.java
python/: README.md  setup.py
python/example/: recorder_simple_sample.py  recorder_threaded_sample.py
python/screen_recorder_sdk/: exit_codes.py  screen_recorder.py
src/ScreenRecorder/: MFEncoder.cpp  Recorder.cpp  RecorderDDA.cpp  ScreenRecorder.cpp
src/ScreenRecorder/inc/: MFEncoder.h  Recorder.h  RecorderDDA.h  RecorderParams.h  ScreenRecorder.h
src/Utils/: HandleD3DWindow.cpp
src/Utils/inc/: HandleD3DWindow.h
